style(app): fix the input width on mobile version

--- a/app/assets/styles/components/healthlogform.scss
+++ b/app/assets/styles/components/healthlogform.scss
@@ -38,6 +38,7 @@
         padding: 0.5rem;
         border-radius: 6px;
         border: 1px solid rgba(0, 0, 0, 0.12);
+        width: 100%;
     }
 
     .actions {
